--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         </div>
         <div class="form-group">
           <label for="exp">Fecha de vencimiento</label>
-          <input id="exp" name="exp" />
+          <input id="expMonth" name="exp" placeholder="month"/>
+          <span>/</span>
+          <input id="expYear" name="exp" placeholder="year"/>
         </div>
         <div class="form-group">
           <label for="cvv">CVV</label>
@@ -26,5 +28,7 @@
         </div>
         <input type="submit" value="Pagar" />
       </form>
+
+      <script src="app.js"></script>
 </body>
 </html>
