En este commit se arreglan funciones para correr en consola

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <input type="submit" value="Pagar" />
       </form>
 
-      <script src="app.js"></script>
+      <script src="functionsCreditCard.mjs"></script>
 </body>
 </html>
