--- a/index.html
+++ b/index.html
@@ -4,30 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     <form>
+      <hr>
         <div class="form-group">
           <label for="cn">Número de tarjeta</label>
-          <input id="cn" name="cn" />
+          <input id="cn" name="cn"/>
+          <img class="cards" src="assets/images/visa_master.png" alt="Tarjetas">
         </div>
         <div class="form-group">
           <label for="exp">Fecha de vencimiento</label>
-          <input id="expMonth" name="exp" placeholder="month"/>
-          <span>/</span>
-          <input id="expYear" name="exp" placeholder="year"/>
+          <div class="date">
+            <div> <input id="expMonth" name="exp" placeholder="month"/></div>
+            <div><span>/</span></div>
+          <div> 
+            <input id="expYear" name="exp" placeholder="year"/></div>
+        </div>
         </div>
         <div class="form-group">
           <label for="cvv">CVV</label>
           <input id="cvv" name="cvv" />
+          <img class="cvv" src="assets/images/infocvv.png" alt="">
         </div>
         <div class="form-group">
           <label for="name">Nombre completo</label>
           <input id="name" name="name" />
-        </div>
-        <input type="submit" value="Pagar" />
+        </div>        
+        <hr>
+        <input id = "button" type="submit" value="Pagar" />
       </form>
 
       <script src="app.js"></script>
